--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,7 +18,11 @@ jobs:
     - uses: actions/checkout@v3
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Composer Update
+    - name: Composer ClearCache
+      run: composer clearcache
+    - name: Composer Self-Update
+      run: composer selfupdate
+    - name: Composer Install
       run: composer install --ignore-platform-reqs
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
