--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "larswiegers/laravel-maps": "^0.17.0",
         "nyholm/psr7": "^1.8",
         "railsware/mailtrap-php": "^1.7",
+        "realrashid/sweet-alert": "^7.1",
         "symfony/http-client": "^7.0"
     },
     "require-dev": {
