--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "sass-loader": "^11.0.1"
   },
   "dependencies": {
+    "datatables.net-dt": "^1.13.8",
+    "gulp": "^4.0.2",
     "sweetalert": "^2.1.2"
   }
 }
