--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "^8.2",
         "cviebrock/eloquent-sluggable": "^9.0",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
@@ -18,6 +18,7 @@
         "nyholm/psr7": "^1.8",
         "railsware/mailtrap-php": "^1.7",
         "realrashid/sweet-alert": "^7.1",
+        "sentry/sentry-laravel": "^4.1",
         "symfony/http-client": "^7.0",
         "yajra/laravel-datatables-html": "^10.12",
         "yajra/laravel-datatables-oracle": "^10.11"
