--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "npm run development",
-    "development": "mix",
-    "watch": "mix watch",
-    "watch-poll": "mix watch -- --watch-options-poll=1000",
-    "hot": "mix watch --hot",
-    "prod": "npm run production",
-    "production": "mix --production"
-  },
-  "devDependencies": {
-    "@popperjs/core": "^2.10.2",
-    "axios": "^1.6.2",
-    "bootstrap": "^5.1.3",
-    "laravel-mix": "^6.0.49",
-    "lodash": "^4.17.19",
-    "postcss": "^8.1.14",
-    "resolve-url-loader": "^5.0.0",
-    "sass": "^1.32.11",
-    "sass-loader": "^11.0.1"
-  },
-  "dependencies": {
-    "datatables.net-dt": "^1.13.8",
-    "gulp": "^4.0.2",
-    "sweetalert": "^2.1.2"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
+    },
+    "devDependencies": {
+        "@popperjs/core": "^2.10.2",
+        "axios": "^1.6.2",
+        "bootstrap": "^5.1.3",
+        "laravel-mix": "^6.0.49",
+        "lodash": "^4.17.19",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "@sentry/browser": "^7.40.0",
+        "datatables.net-dt": "^1.13.8",
+        "gulp": "^4.0.2",
+        "sweetalert": "^2.1.2"
+    }
 }
